--- a/templates/liczba_ogloszen.html
+++ b/templates/liczba_ogloszen.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-      <title>Comflat - Sopot</title>
+      <title>Comflat - Licza ogłoszeń</title>
       <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   </head>
   <body>
@@ -20,6 +20,9 @@
                     <a class="nav-link" href="{{ url_for ('home') }}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for ('sopot') }}">Sopot </a>
+                </li>
+                <li class="nav-item active">
                     <a class="nav-link" href="{{ url_for ('gdynia') }}">Gdynia </a>
                 </li>
                 <li class="nav-item active">
@@ -28,65 +31,50 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{{ url_for ('trojmiasto') }}">Trójmiasto </a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for ('liczba_ogloszen') }}">Liczba ogłoszeń </a>
-                </li>
             </ul>
         </div>
     </nav>
-      <h1>Ceny mieszkań w dzielnicach Sopotu</h1>
+      <h1>Liczba ogłoszeń w dzielnicach trójmiasta </h1>
       <div id="example-graph"></div>
-      <!-- Form -->
-      <form method="post" action="{{ url_for('sopot') }}">
-        <div class="form-group">
-            <label for="liczba_pokoi">Liczba pokoi:</label></br>
-            <label for="liczba_pokoi">Od:</label>
-            <input type="number" class="form-control" id="liczba_pokoi" name="liczba_pokoi" value="Podaj wartość">
-            <label for="liczba_pokoi">Do:</label>
-            <input type="number" class="form-control" id="liczba_pokoi1" name="liczba_pokoi1" value="Podaj wartość">
-        </div>
-          <div class="form-group">
-            <label for="powierzchnia">Powierzchnia mieszkania (Od):</label>
-            <input type="number" class="form-control" id="powierzchnia" name="powierzchnia" value="Podaj wartość">
-          </div>
-          <button type="submit" class="btn btn-primary">Aktualizuj wykres</button>
-      </form>
 
       <script>
         var data = {{ data|tojson }};
         
         // Create a chart
         Plotly.newPlot('example-graph', [
-           {
-               x: data.map(function(row) { return row.Lokalizacja; }),
-               y: data.map(function(row) { return row.SredniaCenaM2; }),
-               type: 'bar',
-               name: 'Ceny mieszkań'
-           }
+            {
+                x: data.map(function(row) { return row.Lokalizacja; }),
+                y: data.map(function(row) { return row.Liczba_ogłoszeń; }),
+                type: 'bar',
+                name: 'Ceny mieszkań'
+            }
         ],
         {
-           title: 'Średnia cena za M2 mieszkań w dzielnicach Sopotu'
+            title: 'Liczba ogłoszeń w dzielnicach trójmiasta',
+            xaxis: {
+                tickangle: 45
+            },
+            margin: {
+                l: 30,
+                r: 10,
+                b: 150,
+                t: 30,
+                pad: 1
+            },
+            width: 1950 // Ustawienie szerokości wykresu na 800 pikseli
         });
      </script>
+     <!--CSS-->
+     <style>
+        body {
+        background-color: #212121;
+        color: white
+        }
+        h1 {
+            text-align:center;
+            margin-top:30px;
+            margin-bottom:30px;
+        }
+    </style>
   </body>
-  <!--CSS-->
-  <style>
-    body {
-    background-color: #212121;
-    color: white
-    }
-    h1 {
-        text-align:center;
-        margin-top:30px;
-        margin-bottom:30px;
-    }
-    .form-group{
-        margin-top:20px;
-        margin-right:1500px;
-        margin-left:10px;
-    }
-    button{
-        margin-left:10px;
-    }
- </style>
 </html>
