--- a/templates/gdansk.html
+++ b/templates/gdansk.html
@@ -42,13 +42,13 @@
           <div class="form-group">
               <label for="liczba_pokoi">Liczba pokoi:</label></br>
               <label for="liczba_pokoi">Od:</label>
-              <input type="number" class="form-control" id="liczba_pokoi" name="liczba_pokoi" value="Podaj wartość">
+              <input type="number" class="form-control" id="liczba_pokoi" name="liczba_pokoi" value="Podaj wartość" required>
               <label for="liczba_pokoi1">Do:</label>
-              <input type="number" class="form-control" id="liczba_pokoi1" name="liczba_pokoi1" value="Podaj wartość">
+              <input type="number" class="form-control" id="liczba_pokoi1" name="liczba_pokoi1" value="Podaj wartość" required>
           </div>
           <div class="form-group">
             <label for="powierzchnia">Powierzchnia mieszkania (Od):</label>
-            <input type="number" class="form-control" id="powierzchnia" name="powierzchnia" value="Podaj wartość">
+            <input type="number" class="form-control" id="powierzchnia" name="powierzchnia" value="Podaj wartość" required>
           </div>
           <button type="submit" class="btn btn-primary">Aktualizuj wykres</button>
       </form>
