--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,8 @@
     a simple phrase describing the "Comflat" application, and its features.-->
 {%block content%}
 <div style="font-family: Arial, sans-serif;margin-top:20px;text-align:center">
-  Comflat is an application that allows for comparing prices of flats in the Tricity. <br/> Additionally, we have the ability to compare prices in districts of a given city with specified guidelines such as the number of rooms or minimum apartment size.
+  
+Comflat to aplikacja umożliwiająca porównywanie cen mieszkań w Trójmieście.</br>
+ Dodatkowo, umożliwia porównywanie cen mieszkań w dzielnicach określonego miasta z określonymi wytycznymi, takimi jak liczba pokoi czy minimalna powierzchnia mieszkania.
 </div>
 {%endblock%}
